package pl.rma.model;

public enum Status {
    NOWA,
    W_TRAKCIE,
    ZAKONCZONA
}


