package pl.rma.util;

public class FileUtils {
    // Na tym etapie może być puste lub z podstawową funkcją zapisu/odczytu, jeśli chcesz
}
