@startuml
package pl.rma.model {
  class Produkt {
    - Integer id
    - String nazwa
  }

  class Reklamacja {
    - Integer id
    - Produkt produkt
    - String opis
    - Status status
    - LocalDate dataZgloszenia
  }

  enum Status {
    NOWA
    W_TRAKCIE
    ZAKONCZONA
  }
}

package pl.rma.repo {
  interface Repozytorium<T> {
    + void dodaj(T t)
    + Optional<T> znajdzPoId(Integer id)
    + List<T> znajdzWszystkie()
    + void aktualizuj(T t)
    + boolean usun(Integer id)
  }

  class MemoryRepozytorium<T> implements Repozytorium<T> {
    - Map<Integer, T> baza
  }
}

package pl.rma.service {
  class ReklamacjaService {
    - Repozytorium<Reklamacja> repozytorium
    + void dodajReklamacje(Reklamacja r)
    + Optional<Reklamacja> znajdzPoId(Integer id)
    + List<Reklamacja> znajdzWszystkie()
    + void aktualizujReklamacje(Reklamacja r)
    + boolean usunReklamacje(Integer id)
    + void aktualizujOpis(Integer id, String opis)
    + void aktualizujProdukt(Integer id, Produkt produkt)
    + void zapiszDoPlikuJson(String path)
    + void wczytajZPlikuJson(String path)
  }
}

package pl.rma.util {
  class FileUtils
  class LocalizationUtils
}

class App

App --> ReklamacjaService
App ..> LocalizationUtils : uses
ReklamacjaService --> Repozytorium
ReklamacjaService ..> FileUtils : uses
Repozytorium <|.. MemoryRepozytorium
Reklamacja --> Produkt
Reklamacja --> Status
@enduml
